# zensical-code-references

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/zensical/: zensical.toml
examples/zensical/docs/: index.md
src/zensical_code_references/: __init__.py  symbolic_snippets.py
tests/: test_symbolic_snippets.py
