[project]
name = "pymdown-symbolic-snippets"
version = "0.2.0"
description = "Symbol-aware markdown snippet references for pymdownx.snippets"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jakob Guldberg Aaes", email = "jakob1379@gmali.com" }
]
requires-python = ">=3.13"
keywords = ["markdown", "documentation", "snippets", "python", "pymdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "markdown>=3.10",
    "pymdown-extensions>=10.17.1",
]

[project.urls]
Homepage = "https://github.com/jakob1379/pymdown-symbolic-snippets"
Repository = "https://github.com/jakob1379/pymdown-symbolic-snippets"
Issues = "https://github.com/jakob1379/pymdown-symbolic-snippets/issues"
Documentation = "https://zensical.org/"

[project.entry-points."markdown.extensions"]
pymdown_symbolic_snippets = "pymdown_symbolic_snippets.symbolic_snippets:makeExtension"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pytest>=8.4.2",
    "zensical>=0.0.24",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.skylos.whitelist.documented]
parse_symbolic_reference = "Public API for symbolic reference parsing; used via extension flow and tests"
makeExtension = "Python-Markdown extension entry point discovered dynamically via entry points"
run = "Python-Markdown preprocessor hook method invoked by framework runtime"
_transform_single_line = "Internal preprocessor flow method invoked by run"
_transform_block_line = "Internal preprocessor flow method invoked by run"
_resolve_target = "Internal preprocessor flow method invoked by transform helpers"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
